# virgo

./: CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
tests/: test_chains.py  test_graph.py  test_schemas.py  test_tools.py
tests/integration/: conftest.py  test_actions.py  test_agent.py  test_cli.py
tests/unit/: __init__.py  conftest.py  factories.py
tests/unit/actions/: test_generate.py  test_protocols.py
tests/unit/agent/: test_agent_init.py  test_chains.py  test_factories.py  test_graph.py  test_llms.py  test_schemas.py  test_tools.py
tests/unit/agent/graph/: __init__.py  test_builder.py  test_state.py
tests/unit/agent/graph/nodes/: __init__.py  test_draft.py  test_format.py  test_research.py  test_revise.py
tests/unit/agent/graph/nodes/chains/: __init__.py  test_first_responder.py  test_markdown_formatter.py  test_revisor.py
tests/unit/cli/: test_commands.py  test_container.py
virgo/: __init__.py  chains.py  graph.py  schemas.py  tools.py
virgo/agent/: __init__.py  graph.py  llms.py
virgo/cli/: commands.py  container.py
virgo/core/: __init__.py  settings.py
virgo/core/actions/: __init__.py  generate.py  protocols.py
virgo/core/agent/: __init__.py  chains.py  factories.py  graph.py  schemas.py  tools.py
virgo/core/agent/graph/: __init__.py  builder.py  state.py
virgo/core/agent/graph/nodes/: draft.py  format.py  research.py  revise.py
virgo/core/agent/graph/nodes/chains/: first_responder.py  markdown_formatter.py  revisor.py
