[project]
name = "virgo"
version = "0.1.0"
description = "Assistant to generate, review and improve articles."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.1.3",
    "langchain-openai>=1.1.1",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.4",
    "pydantic>=2.12.5",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "ruff>=0.14.8",
]
